<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <Button
            android:id="@+id/button1"
            android:layout_width="334dp"
            android:layout_height="63dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="43dp"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="334dp"
            android:layout_height="63dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="134dp"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="334dp"
            android:layout_height="63dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="234dp"
            android:text="@string/button3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="334dp"
            android:layout_height="63dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="331dp"
            android:text="@string/button4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="334dp"
            android:layout_height="63dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="423dp"
            android:text="@string/button5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="334dp"
            android:layout_height="63dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="514dp"
            android:text="@string/button6" />

        <Button
            android:id="@+id/button7"
            android:layout_width="334dp"
            android:layout_height="63dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="591dp"
            android:text="@string/button7" />




        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:gravity="bottom|center"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>


</ScrollView>
